<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"

    android:weightSum="1">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#C62828"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:text="@string/enter_blood_group"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />blood_group
    <Spinner
        android:id="@+id/blood_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/blood_types"
         />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#C62828"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:text="@string/enter_contact_no"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C62828"
        >
        <EditText android:id="@+id/contact_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#C62828"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:text="@string/enter_city"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C62828"
        >
        <EditText android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_request"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:layout_weight="3"
        android:padding="12dp"
        android:text="@string/generate_request" />

</LinearLayout>